update - trying to stop overflow in mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,7 +25,7 @@ body {
 
     @include mobileSize {
         padding: 2em 2em 2em 2em;
-        align-items: flex-end;
+        // align-items: flex-end;
     }
 }
 
